--- a/war/css/style.css
+++ b/war/css/style.css
@@ -8,7 +8,7 @@
     height: 100%;
     position: absolute;
     width: 100%;
-    z-index: 2;
+		margin:0 !important;
 }
 
 .searchArea {
@@ -45,6 +45,10 @@ button.submitButton {
   background: #fff;
   position: relative;
   z-index: 50;
+	margin: 0 !important;
+	padding: 0 !important;
+	height:100vh;
+	overflow:auto;
 }
 
 #results li.result {
@@ -60,8 +64,7 @@ button.submitButton {
 #results li.card.leftLayout {
     border-bottom: 1px solid #c7cdcf;
     border-left: none;
-    margin: 0;
-    padding: 0;
+		width:100%;
 }
 
 .rating {
@@ -89,6 +92,8 @@ ul li img{
 
 #resultsContainer{
   top: 62px;
+	vertical-align: baseline;
+	overflow: hidden;
   /*background: #ccc;*/
   /*background: rgba(0,0,0,0.2);*/
   /*position: relative;*/
@@ -96,14 +101,29 @@ ul li img{
   /*z-index: 2;*/
 }
 
+.displayList{
+	margin:0 !important;
+	padding:0 !important;
+}
+
 .innerTabs{
 	min-height: 30px;
 	/* outline: 1px solid red; */
   /*background: rgba(0,0,0,0.2);*/
   position: relative;
-  /*width: 646px;*/
-  z-index: 2;
+  /*width: inherit;*/
+  z-index: 20;
   display: block;
+	/*overflow: auto;*/
+	margin:0 !important;
+	padding:0 !important;
+}
+
+.displayMap{
+	position:absolute;
+	width:100%;
+	height:100vh;
+  overflow: hidden;
 	margin:0 !important;
 	padding:0 !important;
 }
